fix: GitHub Pages homepage URL 오타 수정 (jimi286 -> jim1286)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "homepage": "https://황지민.github.io/portfolio",
+  "homepage": "https://jim1286.github.io/portfolio",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
